# Examiner

./: .env.exaample  .env.example  .gitignore  README.md  create_db.sh  pyproject.toml  start_app.py  tox.ini
src/: manage.py  start_app.py
src/app/core/: constants.py  db_queries.py
src/app/examiner/: asgi.py  settings.py  urls.py  views.py  wsgi.py
src/app/python_questions/: apps.py  models.py
src/app/questions/: admin.py  models.py  urls.py  views.py
src/app/questions/migrations/: 0001_initial.py  0002_python.py
src/app/templates/: base.html  index.html
src/app/templates/includes/: footer.html  nav.html
src/app/templates/questions/: finish.html  question.html  results.html
src/app/users/templatetags/: user_filters.py
src/core/: constants.py  db_queries.py  manage_cache.py
src/examiner/: asgi.py  settings.py  urls.py  wsgi.py
src/questions/: views.py
src/questions/migrations/: 0002_python.py
src/templates/: base.html  index.html
tests/: fail_messages.py  test_db.py  test_examiner.py  test_frame.py  test_real_db.py  test_urls.py
