[tool.poetry]
name = "Examiner"
version = "0.1.0"
description = ""
authors = ["Xewus <xewuss@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
mysqlclient = "^2.1.1"
Django = "^4.0.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
