[tool.poetry]
name = "Examiner"
version = "1.0.0"
description = ""
authors = ["Xewus <xewuss@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
mysqlclient = "^2.1.1"
Django = "^4.0.6"
uWSGI = "^2.0.20"
python-decouple = "^3.6"
daphne = "^3.0.2"
requests = "^2.28.1"
django-extensions = "^3.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
ipython = "^8.4.0"
uwsgitop = "^0.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
